extends Control

@onready var ip_input = $VBoxContainer/IPInput
@onready var connect_button = $VBoxContainer/ConnectButton
@onready var status_label = $VBoxContainer/StatusLabel
@onready var username_input = $VBoxContainer/UserName


func _ready():
	connect_button.pressed.connect(_on_connect_pressed)
	status_label.text = ""  # –û—á–∏—Å—Ç–∏—Ç–∏ —Å—Ç–∞—Ç—É—Å –ø—Ä–∏ –∑–∞–ø—É—Å–∫—É

func _on_connect_pressed():
	var ip = ip_input.text.strip_edges()
	
	if ip.is_empty():
		status_label.text = "‚ö†Ô∏è –í–≤–µ–¥—ñ—Ç—å IP-–∞–¥—Ä–µ—Å—É!"
		return

	var peer = ENetMultiplayerPeer.new()
	var client = peer.create_client(ip, 12345)

	if client != OK:
		status_label.text = "‚ùå –ü–æ–º–∏–ª–∫–∞ –ø—ñ–¥–∫–ª—é—á–µ–Ω–Ω—è (–∫–æ–¥: %d)".format(client)
		print("–ü–æ–º–∏–ª–∫–∞ —Å—Ç–≤–æ—Ä–µ–Ω–Ω—è –∫–ª—ñ—î–Ω—Ç–∞ ENet:", client)
		return

	multiplayer.multiplayer_peer = peer
	status_label.text = "üîÑ –ü—ñ–¥–∫–ª—é—á–µ–Ω–Ω—è..."

	# –ü–µ—Ä–µ–≤—ñ—Ä–∏–º–æ, —á–∏ —Ä–µ–∞–ª—å–Ω–æ –ø—ñ–¥–∫–ª—é—á–µ–Ω–æ –ø—ñ—Å–ª—è –Ω–µ–≤–µ–ª–∏–∫–æ—ó –∑–∞—Ç—Ä–∏–º–∫–∏
	await get_tree().create_timer(1.0).timeout

	if multiplayer.get_unique_id() == 1:
		# –¶–µ –æ–∑–Ω–∞—á–∞—î, —â–æ –º–∏ —Å–∞–º—ñ —Å—Ç–∞–ª–∏ —Å–µ—Ä–≤–µ—Ä–æ–º ‚Äî –æ—Ç–∂–µ, –ø—ñ–¥–∫–ª—é—á–µ–Ω–Ω—è –ø—Ä–æ–≤–∞–ª–µ–Ω–µ
		status_label.text = "‚ùå –ù–µ –≤–¥–∞–ª–æ—Å—è –ø—ñ–¥–∫–ª—é—á–∏—Ç–∏—Å—è (–≤—ñ—Ä–æ–≥—ñ–¥–Ω–æ, —Å–µ—Ä–≤–µ—Ä –Ω–µ –∑–∞–ø—É—â–µ–Ω–æ)"
		multiplayer.multiplayer_peer = null
	else:
		Global.username = username_input.text
		print("‚úÖ –ü—ñ–¥–∫–ª—é—á–µ–Ω–æ –¥–æ —Å–µ—Ä–≤–µ—Ä–∞ –∑ ID:", multiplayer.get_unique_id())
		status_label.text = "‚úÖ –ü—ñ–¥–∫–ª—é—á–µ–Ω–æ! –ü–µ—Ä–µ—Ö—ñ–¥ —É Lobby..."
		rpc_id(1, "register_player", multiplayer.get_unique_id(), Global.username)
		await get_tree().create_timer(1.0).timeout
		get_tree().change_scene_to_file("res://Lobby.tscn")
